This file contains a detailed explanation of the changes between individual
versions of XMLenc.

______________________________________________________________________________
CHANGES INTRODUCED IN XMLENC 0.54:

* The quotationMark is now taken into account when outputting the declaration.

* Consistently spelling xmlenc as 'XMLenc'.

* Consistently describing XMLenc as "XMLenc: fast low-level stream-based XML
  output library for Java."

* Added section 'Implementation notes' to org.znerd.xmlenc package summary.

* Reformatted the Java source files.

* Fixed the package of the unit tests.

* Added serialVersionUID class field to Exception classes.

* Renamed the package.html files to package-info.java.

* Improved the package description of org.znerd.xmlenc.

* Removed superfluous files/directories, such as:
  - src/css/javadoc
  - src/css/checkstyle

* Cleaned up unit tests:
  - Converted unit tests from JUnit 3 to JUnit 4.
  - Split OutputTest class into several smaller test classes.

______________________________________________________________________________
CHANGES INTRODUCED IN XMLENC 0.53:

* Updated e-mailadresses of Ernst de Haan and Anthony Goubard.

* Slightly improved the XMLOutputter Javadoc class comments by mentioning
  whether XML Namespaces are supported.

* Removed some @since tags on private fields.

* Removed all @version and @author tags.

* Added method emptyTag(String) to class XMLOutputter. It can throw the (new)
  exception NoSuchElementException.

* Reformatted the Java source files.

* This library is now built with Maven instead of Ant.

______________________________________________________________________________
CHANGES INTRODUCED IN XMLENC 0.52:

* Generated package now has the prefix .tgz instead of .tar.gz.

* The tests are now included in the package.

______________________________________________________________________________
CHANGES INTRODUCED IN XMLENC 0.51:
